--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive ./test/unit"
   },
   "repository": {
     "type": "git",
@@ -14,8 +14,13 @@
     "registry": "https://registry.npmjs.org/"
   },
   "keywords": [
+    "lazy",
     "getter"
   ],
   "author": "Brian Lauber",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.0.1"
+  }
 }
